--- a/index.html
+++ b/index.html
@@ -2,40 +2,16 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<title>Club couture - Lycée polyvalent Clos Maire</title>
-  	</head>
-
-  	<body>
-    		<header>
-  			<a id="club_couture" href="index.html">Accueil</a>
-	    		<a id="projet" href="projet.html">Projet</a>
-  			<a id="inscription" href="inscription.html">Inscription</a>
-  			<a id="nous_contacter" href="contact.html">Nous contacter</a>
-		</header>
-
-		<div id="accueil">
-			<h1 class="h1">Club couture</h1>
-		</div>
-
-		<div class="description">
-			<h2 id="le_club_couture">Le club couture</h2>
-			<p class="paragraphe">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-			<img src="data/image/téléchargement.png" alt="description"></img>
-		</div>
+		<title>Club Couture</title>
+		<link rel="stylesheet" href="CSS_style.css">
 		
-    		<footer>
-  			<p>Lycée polyvalent Clos Maire</p>
-  			<p>-</p>
-  			<p>Club couture</p>
-  			<p>-</p>
-  			<p>2025</p>
-  			<p>-</p>
-  			<p>Tous droits réservés</p>
-  			<p>-</p>
-  			<p>Mentions légales</p>
-  			<p>-</p>
-  			<p>Politique de confidentialité</p>
-	  	</footer>
-    </body>
-
+	</head>
+	<body>
+	<div class="1">	
+		<h1>Club Couture Clos Maire </h1>
+			<a href="home.html" class="bouton">
+			<h2> Entrer dans le  Club Couture </h2>
+			</a>
+	</div>
+	</body>
 </html>
