--- a/home.html
+++ b/home.html
@@ -9,7 +9,9 @@
 	<body>
 	
 	<div id="navigation">
-		<h3> GOGO </h3>
+		<a href="home.html" id="bouton_nav">
+			<h3> GOGO </h3>
+			</a>
 	
 	</div>
 	<div id="presentation">
