--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 	
 	<div id="navigation">
 		<a href="home.html" id="bouton_nav">
-			<h3> GOGO </h3>
+			<h3 id="Contacts"> Contacts </h3>
 			</a>
 	
 	</div>
