--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		
 	</head>
 	<body>
-	<div class="1">	
+	<div id="div1">	
 		<h1>Club Couture Clos Maire </h1>
 			<a href="home.html" class="bouton">
 			<h2> Entrer dans le  Club Couture </h2>
