--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
 
 	<div id="presentation">
 	<h3 id="present"> Présentation </h1>
+	<div id="content-pst">
 	<h3 id="Titre1_pst">
 	Bienvenue au Club Couture du Lycée Clos Maire
 	</h3>
@@ -90,7 +91,7 @@
 		<br>&nbsp&nbspTu peux venir une fois pour essayer... ou rester pour tout créer !
 		<br>À bientôt au Club Couture !
 	</p>
-
+	</div>
 	</div>
 	</div>
 	</body>
