--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Club Couture</title>
 		<link rel="stylesheet" href="CSS_style.css">
-		
+		<link rel="icon" type="png" href="logo.png">
 	</head>
 	<body>
 	<div id="div1">	
