--- a/contacts.html
+++ b/contacts.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<title>Club Couture</title>
 		<link rel="stylesheet" href="CSS_style.css">
-		
+		<link rel="icon" type="png" href="logo.png">
 	</head>
 	<body>
-	<div id="Content">
+	<div id="ContentContacts">
 	
 	
 	<div id="navigation">
@@ -16,3 +16,12 @@
     <a href="photos.html" class="bouton_nav">Photos</a>
     <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
 	</div>
+	
+	<p id="titrecontacts"> 
+		Contacts
+		</p>
+	
+	
+	</div>	
+	</body>
+	
