--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Club Couture</title>
 		<link rel="stylesheet" href="CSS_style.css">
-		
+		<link rel="icon" type="png" href="https://raw.githubusercontent.com/AugustinMnt/AugustinMnt.github.io/refs/heads/main/logo.png">
 	</head>
 	<body>
 	<div id="Content">
@@ -19,7 +19,7 @@
 
 
 	<div id="presentation">
-	<h3 id="present"> Présentation </h1>
+	<h3 id="present"> Présentation </h3>
 	<div id="content-pst">
 	<h3 id="Titre1_pst">
 	Bienvenue au Club Couture du Lycée Clos Maire
@@ -35,7 +35,7 @@
 		<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp	•	Gratuit ✅
 		<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp	•	Ouvert à tous ✅
 		<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp	•	Sans inscription obligatoire ✅
-		<br>Que tu sois débutant ou expérimenté, tu es le bienvenu dans une ambiance conviviale et détendue. On se retrouve :
+		<br>Que tu sois débutant ou expérimenté, tu es le bienvenu dans une ambiance conviviale et détendue. On se retrouve:
 		<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp	•	Tous les jeudis de 12h à 16h
 		<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp	•	Lundi de 13h à 14h (semaine A) pour une séance découverte
 		<br>📍Labo Histoire-Géo, à côté de la salle 115
@@ -95,3 +95,4 @@
 	</div>
 	</div>
 	</body>
+w
