--- a/contacts.html
+++ b/contacts.html
@@ -17,9 +17,40 @@
     <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
 	</div>
 	
-	<p id="titrecontacts"> 
-		Contacts
-		</p>
+	<p id="titrecontacts"> Contacts
+	</p>
+	<div id="list_contacts">
+		<div class="fiche" id="fichecontact1">
+			<p class="Nom_Contact">
+				Lycée Clos Maire
+				</p>
+			<div class="int_fiche">
+			<img class="icone_contacts" src="icone_localisation.png">
+			<p> 4 rue des Rôles - BP 229 - 21200 Beaune </p>
+			<img class="icone_contacts" src="icone_telephone.png">
+			<p> Tél. : 0380244000 </p>
+			<img class="icone_contacts" src="icone_mail.png">
+			<p> Email : 0210006t@ac-dijon.fr </p>
+			<img class="icone_contacts" src="icone_web.png">
+			<p> Site : <a href="https://lyc-closmaire-beaune.eclat-bfc.fr"> https://lyc-closmaire-beaune.eclat-bfc.fr </a>
+		
+		
+		<!-- <div class="fiche" id="fichecontact2"> -->
+			<!-- <p class="Nom_Contact"> -->
+				<!-- Lycée Clos Maire -->
+				<!-- </p> -->
+			<!-- <div class="int_fiche"> -->
+			<!-- <img class="icone_contacts" src="icone_localisation.png"> -->
+			<!-- <p> 4 rue des Rôles - BP 229 - 21200 Beaune </p> -->
+			<!-- <img class="icone_contacts" src="icone_telephone.png"> -->
+			<!-- <p> Tél. : 0380244000 </p> -->
+			<!-- <img class="icone_contacts" src="icone_mail.png"> -->
+			<!-- <p> Email : 0210006t@ac-dijon.fr </p> -->
+			<!-- <img class="icone_contacts" src="icone_web.png"> -->
+			<!-- <p> Site : <a href="https://lyc-closmaire-beaune.eclat-bfc.fr"> https://lyc-closmaire-beaune.eclat-bfc.fr </a> -->
+	
+	
+	</div>
 	
 	
 	</div>	
