--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
     <a href="photos.html" class="bouton_nav">Photos</a>
     <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
 	</div>
-	
+	<div id="Content_contacts2">
 	<p id="titrecontacts"> Contacts
 	</p>
 	<div id="list_contacts">
@@ -54,5 +54,7 @@
 	
 	
 	</div>	
+	</div>
+	</div>
 	</body>
 	
