--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <a href="home.html" class="bouton_nav">Présentation</a>
     <a href="contacts.html" class="bouton_nav">Contacts</a>
     <a href="photos.html" class="bouton_nav">Photos</a>
-    <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
+    <a href="localisation.html" class="bouton_nav">Inscription</a>
 	</div>
 	<div id="Content_contacts2">
 	<p id="titrecontacts"> Contacts
@@ -28,33 +28,50 @@
 			<img class="icone_contacts" src="icone_localisation.png">
 			<p> 4 rue des Rôles - BP 229 - 21200 Beaune </p>
 			<img class="icone_contacts" src="icone_telephone.png">
-			<p> Tél. : 0380244000 </p>
+			<p> Tél. : 03 80 24 40 00 </p>
 			<img class="icone_contacts" src="icone_mail.png">
 			<p> Email : 0210006t@ac-dijon.fr </p>
 			<img class="icone_contacts" src="icone_web.png">
 			<p> Site : <a href="https://lyc-closmaire-beaune.eclat-bfc.fr"> https://lyc-closmaire-beaune.eclat-bfc.fr </a>
 		
 		
-		<!-- <div class="fiche" id="fichecontact2"> -->
-			<!-- <p class="Nom_Contact"> -->
-				<!-- Lycée Clos Maire -->
-				<!-- </p> -->
-			<!-- <div class="int_fiche"> -->
-			<!-- <img class="icone_contacts" src="icone_localisation.png"> -->
-			<!-- <p> 4 rue des Rôles - BP 229 - 21200 Beaune </p> -->
-			<!-- <img class="icone_contacts" src="icone_telephone.png"> -->
-			<!-- <p> Tél. : 0380244000 </p> -->
-			<!-- <img class="icone_contacts" src="icone_mail.png"> -->
-			<!-- <p> Email : 0210006t@ac-dijon.fr </p> -->
-			<!-- <img class="icone_contacts" src="icone_web.png"> -->
-			<!-- <p> Site : <a href="https://lyc-closmaire-beaune.eclat-bfc.fr"> https://lyc-closmaire-beaune.eclat-bfc.fr </a> -->
+		
 	
 	
 	</div>
+			
 	
+	</div>
+			<div class="fiche" id="fichecontact2">
+			<p class="Nom_Contact">
+				Club Couture
+				</p>
+			<div class="int_fiche">
+			<img class="icone_contacts" src="icone_localisation.png">
+			<p>Lycée Clos Maire - Salle 115 </p>
+			<img class="icone_contacts" src="icone_insta.png">
+			<p>Instagram:@<a href="https://www.instagram.com/closmaire_couture/">closmaire_couture </a>	</p>
+			
+			<img class="icone_contacts" src="icone_mail.png">
+			<p> Messagerie Eclat: Mme Poret </p>
+			
+	</div>
+			
+			
+	</div>
 	
-	</div>	
 	</div>
-	</div>
+	<div class="fiche" id="fichecontact3">
+			<p class="Nom_Contact">
+				Maintenance du site Web
+				</p>
+			<div class="int_fiche">
+			<img class="icone_contacts" src="icone_localisation.png">
+			<p>Lycée Clos Maire - Salle N10( NSI ) </p>
+			<img class="icone_contacts" src="icone_mail.png">
+			<p> Mail: augustinminot@gmail.com 	</p>
+			
+			<img class="icone_contacts" src="icone_telephone.png">
+			<p> Tel: 07 57 06 29 73 </p>
 	</body>
 	
