--- a/localisation.html
+++ b/localisation.html
@@ -17,3 +17,4 @@
     <a href="photos.html" class="bouton_nav">Photos</a>
     <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
 	</div>
+	<iframe src="https://framaforms.org/formulaire-dinscription-club-couture-lycee-clos-maire-1745957634" width="75%" height="800" border="10"></iframe>
