--- a/localisation.html
+++ b/localisation.html
@@ -13,8 +13,8 @@
 	
 	<div id="navigation">
     <a href="home.html" class="bouton_nav">Présentation</a>
-    <a href="contacts.html" class="bouton_nav">Contacts</a>
     <a href="photos.html" class="bouton_nav">Photos</a>
-    <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
+	<a href="contacts.html" class="bouton_nav">Contacts</a>
+    <a href="localisation.html" class="bouton_nav">Inscription</a>
 	</div>
 	<iframe src="https://framaforms.org/formulaire-dinscription-club-couture-lycee-clos-maire-1745957634" width="75%" height="800" border="10"></iframe>
