--- a/photos.html
+++ b/photos.html
@@ -12,7 +12,7 @@
 	
 	<div id="navigation">
     <a href="home.html" class="bouton_nav">Présentation</a>
-    <a href="contacts.html" class="bouton_nav">Contacts</a>
     <a href="photos.html" class="bouton_nav">Photos</a>
-    <a href="localisation.html" class="bouton_nav">Où s'inscrire ?</a>
+	<a href="contacts.html" class="bouton_nav">Contacts</a>
+    <a href="localisation.html" class="bouton_nav">Inscription</a>
 	</div>
