--- a/photos.html
+++ b/photos.html
@@ -16,3 +16,16 @@
 	<a href="contacts.html" class="bouton_nav">Contacts</a>
     <a href="localisation.html" class="bouton_nav">Inscription</a>
 	</div>
+	<div id="image">
+			<img <img class="photos" id="photo_1" src="image1.webp">
+			<img <img class="photos" id="photo_2" src="image2.webp">
+			<img <img class="photos" id="photo_3" src="image3.webp">
+			<img <img class="photos" id="photo_4" src="image4.webp">
+			<img <img class="photos" id="photo_5" src="image5.webp">
+			<img <img class="photos" id="photo_6" src="image6.webp">
+			<img <img class="photos" id="photo_7" src="image7.webp">
+			<img <img class="photos" id="photo_8" src="image8.webp">
+	</div>
+	
+	
+	</body>
