--- a/localisation.html
+++ b/localisation.html
@@ -15,6 +15,10 @@
     <a href="home.html" class="bouton_nav">Présentation</a>
     <a href="photos.html" class="bouton_nav">Photos</a>
 	<a href="contacts.html" class="bouton_nav">Contacts</a>
-    <a href="localisation.html" class="bouton_nav">Inscription</a>
+    <a href="localisation.html" class="bouton_nav" id="bouton_hide">Inscription</a>
 	</div>
+	<p id="titreinscription"> Formulaire d'inscription
+	</p>
+	<p id="titreinscription2"> Formulaire 
+	</p>
 	<iframe id="formulaire" src="https://framaforms.org/formulaire-dinscription-club-couture-lycee-clos-maire-1745957634" width="75%" height="1920px" border="10"></iframe>
