--- a/photos.html
+++ b/photos.html
@@ -12,11 +12,15 @@
 	
 	<div id="navigation">
     <a href="home.html" class="bouton_nav">Présentation</a>
-    <a href="photos.html" class="bouton_nav">Photos</a>
+    <a href="photos.html" class="bouton_nav" id="bouton_hide">Photos</a>
 	<a href="contacts.html" class="bouton_nav">Contacts</a>
     <a href="localisation.html" class="bouton_nav">Inscription</a>
 	</div>
+	
+	<p id="titrephotos"> Photos
+	</p>
 	<div id="image">
+	
 			<img <img class="photos" id="photo_1" src="image1.webp">
 			<img <img class="photos" id="photo_2" src="image2.webp">
 			<img <img class="photos" id="photo_3" src="image3.webp">
