--- a/contacts.html
+++ b/contacts.html
@@ -12,9 +12,8 @@
 	
 	<div id="navigation">
     <a href="home.html" class="bouton_nav">Présentation</a>
-   
     <a href="photos.html" class="bouton_nav">Photos</a>
-     <a href="contacts.html" class="bouton_nav">Contacts</a>	
+	<a href="contacts.html" class="bouton_nav" id="bouton_hide">Contacts</a>
     <a href="localisation.html" class="bouton_nav">Inscription</a>
 	</div>
 	<div id="Content_contacts2">
