--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	
 	
 	<div id="navigation">
-    <a href="home.html" class="bouton_nav">Présentation</a>
+    <a href="home.html" class="bouton_nav" id="bouton_hide">Présentation</a>
     <a href="photos.html" class="bouton_nav">Photos</a>
 	<a href="contacts.html" class="bouton_nav">Contacts</a>
     <a href="localisation.html" class="bouton_nav">Inscription</a>
