--- a/contacts.html
+++ b/contacts.html
@@ -73,5 +73,18 @@
 			
 			<img class="icone_contacts" src="icone_telephone.png">
 			<p> Tel: 07 57 06 29 73 </p>
+	</div>
+	</div>
+	</div>
+	</div>
+	<footer>
+	<div id="infos">
+	<a href="https://augustinmnt.github.io/" class="bouton_nav2">	Club Couture </a>
+	<a  class="bouton_nav2">	Clos Maire </a>
+	<a href="Mention.html" class="bouton_nav2">	Mentions Légales </a>
+
+	
+	</div>
+	</footer>
 	</body>
 	
