--- a/home.html
+++ b/home.html
@@ -94,5 +94,15 @@
 	</div>
 	</div>
 	</div>
+	
+	<footer>
+	<div id="infos">
+	<a href="https://augustinmnt.github.io/" class="bouton_nav2">	Club Couture </a>
+	<a  class="bouton_nav2">	Clos Maire </a>
+	<a href="Mention.html" class="bouton_nav2">	Mentions Légales </a>
+
+	
+	</div>
+	</footer>
 	</body>
 w
