--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
 			<h2> Entrer dans le  Club Couture </h2>
 			</a>
 	</div>
+	<footer>
+	<div id="infos2">
+	<a href="https://augustinmnt.github.io/" class="bouton_nav2">	Club Couture </a>
+	<a  class="bouton_nav2">	Clos Maire </a>
+	<a href="Mention.html" class="bouton_nav2">	Mentions Légales </a>
+
+	
+	</div>
+	</footer>
 	</body>
 </html>
