--- a/localisation.html
+++ b/localisation.html
@@ -22,3 +22,13 @@
 	<p id="titreinscription2"> Formulaire 
 	</p>
 	<iframe id="formulaire" src="https://framaforms.org/formulaire-dinscription-au-club-couture-lycee-clos-maire-1746283152" width="75%" height="1920px" border="10"></iframe>
+	</div>
+<footer>
+	<div id="infos">
+	<a href="https://augustinmnt.github.io/" class="bouton_nav2">	Club Couture </a>
+	<a  class="bouton_nav2">	Clos Maire </a>
+	<a href="Mention.html" class="bouton_nav2">	Mentions Légales </a>
+
+	
+	</div>
+	</footer>
