--- a/photos.html
+++ b/photos.html
@@ -30,6 +30,14 @@
 			<img <img class="photos" id="photo_7" src="image7.webp">
 			<img <img class="photos" id="photo_8" src="image8.webp">
 	</div>
+	</div>
+	<footer>
+	<div id="infos">
+	<a href="https://augustinmnt.github.io/" class="bouton_nav2">	Club Couture </a>
+	<a  class="bouton_nav2">	Clos Maire </a>
+	<a href="Mention.html" class="bouton_nav2">	Mentions Légales </a>
+
 	
-	
+	</div>
+	</footer>
 	</body>
