--- a/photos.html
+++ b/photos.html
@@ -34,7 +34,7 @@
 	<footer>
 	<div id="infos">
 	<a href="https://augustinmnt.github.io/" class="bouton_nav2">	Club Couture </a>
-	<a  class="bouton_nav2">	Clos Maire </a>
+	<a  class="bouton_nav2" href="https://lyc-closmaire-beaune.eclat-bfc.fr">	Clos Maire </a>
 	<a href="Mention.html" class="bouton_nav2">	Mentions Légales </a>
 
 	
